<?xml version="1.0"?>
<package format="2">
  <name>mission_lib</name>
  <version>0.0.0</version>
  <description>The mission_lib package</description>

  <maintainer email="amontesromero@us.es">Ángel Manuel Montes Romero</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geodesy</build_depend>
  <!-- <build_export_depend>message_runtime</build_export_depend> -->
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <!-- <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geodesy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
