<?xml version="1.0"?>
<package>
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>For calculating paths with an A* algorithm, both for Cartesian and geographic coordinates. Can build automatically the obstacles map, draw or plot results, and take into account elevation irregularities of the ground.</description>

  <maintainer email="amontesromero@us.es">Ángel Manuel Montes Romero</maintainer>


  <license>MIT</license>


  <author email="amontesromero@us.es">Ángel Manuel Montes Romero</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>curl</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>curl</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
